added instances field to default config as well  improved the default shifts updated the README to reflect changes added in button update

--- a/config.yml
+++ b/config.yml
@@ -14,6 +14,11 @@ clusters:
     master:
       token: ""
       channel_id: ""
+    instances: 
+      - token: ""
+        channel_id: ""
+      - token: ""
+        channel_id: ""
 
 shifts:
   - state: "active"
