--- a/config.yml
+++ b/config.yml
@@ -10,17 +10,33 @@
 # asking for support on GitHub or Discord.
 
 clusters:
-  default:
+  cluster_1:
     master:
-      token: ""
-      channel_id: ""
-    instances: 
-      - token: ""
-        channel_id: ""
-      - token: ""
-        channel_id: ""
+      token: "ODk2MzA3MjI3NjcyMDU1ODEw.YWLqcw.LQ1FxekYGXxt0ZBO4u8nyFcvFUY"
+      channel_id: "896736985664856064"
+      
+    instances:
+    - token: "ODk2MzA3MjI3Mzc0MjY0MzYw.YWLqcQ.UnAmgkRntFD8P2x4Rgk0xdS-t1o"
+      channel_id: "896736985664856064"
+
+    - token: "ODk2MzA3NzQ1NDAwMTgwNzY3.YWLqaA.SaYuWOHy45JKAcK5ZygMlDzPwes"
+      channel_id: "896736990190526466"
+
+    - token: "ODk2MzA3NzUxOTA1NTUwMzM3.YWLqdg.UsUBO8ctO2rhYT39V5W4SScfvYU"
+      channel_id: "896736995630542888"
+
+    - token: "ODk2MzA5Nzg5Nzc5NDUxOTA1.YWLqZg.NS8McFE52tGZSGCbtyjE2FFhdXI"
+      channel_id: "896737000839872552"
+
+    
+
+    
 
 shifts:
+  - state: "dormant"
+    duration:
+      base: 1
+      variation: 10
   - state: "active"
     duration:
       base: 7200
@@ -40,16 +56,16 @@ shifts:
 
 features:
   commands:
-    beg: true
-    postmeme: true
-    search: true
-    highlow: true
-    fish: true
-    hunt: true
-    dig: true
-    work: true
-    trivia: true
-    crime : true
+  #   beg: true
+  #   postmeme: true
+  #   search: true
+  #   highlow: true
+  #   fish: true
+  #   hunt: true
+  #   dig: true
+  #   work: true
+  #   trivia: true
+  #   crime : true
     guess: false
 
   scratch:
@@ -57,8 +73,8 @@ features:
     amount: 50
     priority: false
 
-  custom_commands:
-  - value: "pls work mod"
+  # custom_commands:
+  # - value: "pls work mod"
   auto_buy:
     fishing_pole: true
     hunting_rifle: true
@@ -75,16 +91,59 @@ features:
       - "rabbit"
       - "skunk"
   auto_gift:
-    enable: false
+    enable: true
     items:
       - "bank"
       - "pizza"
+      - "diaper"
+      - "pepe"
+      - "potato"
+      - "pepestatue"
+      - "boar"
+      - "freshbread"
+      - "cookie"
+      - "deer"
+      - "ant"
+      - "dragon"
+      - "duck"
+      - "exoticfish"
+      - "commonfish"
+      - "garbage"
+      - "jellyfish"
+      - "junk"
+      - "legendaryfish"
+      - "rabbit"
+      - "rarefish"
+      - "seaweed"
+      - "skunk"
+      - "stickbug"
+      - "trash"
+      - "worm"
+      - "aetheryxflower"
+      - "armpithair"
+      - "badoszcard"
+      - "bean"
+      - "bunnysapron"
+      - "bean"
+      - "bluephallicobject"
+      - "bluesplane"
+      - "sand"
+      - "bunnysapron"
+      - "candy"
+      - "corncob"
+      - "corndog"
+      - "ducttape"
+      - "fossil"
+      - "bread"
+      - "goldenphallic"
+      - "meme"
+      - "normie"
   auto_share:
-    enable: false
-    maximum_balance: 8000000
-    minimum_balance: 5000000
-  auto_blackjack:
     enable: true
+    maximum_balance: 5000000
+    minimum_balance: 500000
+  auto_blackjack:
+    enable: false
     amount: 50
     pause_below_balance: 100
     pause_above_balance: 50000000
@@ -364,11 +423,13 @@ features:
     buy_lifesaver_on_death: true
   balance_check:
     enable: true
-    interval: 180
-  log_to_file: true
-  verbose_log_to_stdout: false
+    interval: 1800
+  log_to_file: false
+  verbose_log_to_stdout: true
   debug: false
-  max_items_per_trade: 5
+  trade:
+    max_items: 2
+    delay: 2000
 
 compatibility:
   allowed_searches:
@@ -1149,7 +1210,7 @@ compatibility:
     hunt: 63
     blackjack: 13
     sell: 6
-    gift: 26
+    gift: 8
     share: 13
     dig: 42
     work: 3600
