--- a/config.yml
+++ b/config.yml
@@ -45,17 +45,21 @@ shifts:
 
 features:
   commands:
-  #   beg: true
-  #   postmeme: true
-  #   search: true
-  #   highlow: true
-  #   fish: true
-  #   hunt: true
-  #   dig: true
-  #   work: true
-  #   trivia: true
-  #   crime : true
+    beg: true
+    postmeme: true
+    search: true
+    highlow: true
+    fish: true
+    hunt: true
+    dig: true
+    work: true
+    trivia: true
+    crime : true
     guess: false
+
+  trade:
+    max_items: 2
+    delay: 1000
 
   scratch:
     enable: false
@@ -416,9 +420,6 @@ features:
   log_to_file: false
   verbose_log_to_stdout: true
   debug: false
-  trade:
-    max_items: 2
-    delay: 1000
 
 compatibility:
   allowed_searches:
